// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<Button /> tests should render a secondary button 1`] = `
<div>
  <button
    class="button button-secondary"
    data-testid="button"
    type="button"
  >
    Hello, World!
  </button>
</div>
`;

exports[`<Button /> tests should render as default button 1`] = `
<div>
  <button
    class="button button-primary"
    data-testid="button"
    type="button"
  >
    Hello, World!
  </button>
</div>
`;
